fix: scrollbar color

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -22,7 +22,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: var(--white);
+    background-color: var(--dark);
     border-radius: 50px;
   }
 
